# todo-bff

./: .env  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  package.yaml  stack.yaml  todo-bff.cabal
app/: Main.hs
config/grafana/dashboards/: haskell-app.json
config/prometheus/: prometheus.yml
src/: Lib.hs  Todo.hs  Types.hs
src/Db/: Connection.hs  Migration.hs  Types.hs
test/: TodoSpec.hs
