name:                todo-bff
version:             0.1.0.0
synopsis:            Todo Application Web/Mobile BackendForFrontend app
description:         Please see README.md
homepage:            https://github.com/cackharot/todo-bff#readme
license:             BSD3
license-file:        LICENSE
author:              cackharot
maintainer:          cackharot@gmail.com
copyright:           2019 cackharot
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring >=0.9
                     , aeson
                     , servant-server
                     , wai >=3
                     , warp
                     , prometheus-client
                     , wai-middleware-prometheus
                     , prometheus-metrics-ghc
  default-language:    Haskell2010

executable todo-bff-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-T"
  build-depends:       base
                     , todo-bff
  default-language:    Haskell2010

test-suite todo-bff-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , todo-bff
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cackharot/todo-bff
